# python-template

./: LICENSE  justfile  pyproject.toml
.github/workflows/: publish_release.yaml  tests.yaml
docs/source/: conf.py  index.rst  modules.rst
examples/: do_foo.py
src/millie/: __init__.py
src/millie/_internal/: __init__.py
tests/: test_foo.py
