[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "millie"
maintainers = [
  { name = "Lukas Turcani", email = "lukasturcani93@gmail.com" },
]

dependencies = []
requires-python = ">=3.11"
dynamic = ["version"]
readme = "README.rst"
description = "Does things for you."


[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "mypy",
  "pytest",
  "pytest-cov",
  "sphinx",
  "sphinx-copybutton",
  "build",
  "twine",
  "furo",
]

[project.urls]
github = "https://github.com/lukasturcani/millie"
documentation = "https://millie.readthedocs.io"

[tool.setuptools_scm]

[tool.ruff]
line-length = 79
extend-select = ["I"]

[tool.black]
line-length = 79

[tool.mypy]
show_error_codes = true
implicit_optional = false
warn_no_return = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_unreachable = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true
